--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
     <!-- Аудио элемент -->
     <audio id="background-audio" loop>
-        <source src="https://assets.mixkit.co/sfx/preview/mixkit-horror-organ-drum-loop-481.mp3" type="audio/mpeg">
+        <source src="vampire_sound.mp3" type="audio/mpeg">
     </audio>
 
     <!-- Кнопка управления звуком -->
