--- a/index.html
+++ b/index.html
@@ -157,22 +157,45 @@
         }
 
         /* Стили для аудио и кнопки */
+        .media-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 2rem;
+            width: 60%;
+            max-width: 600px;
+        }
+
+        #vampire-video {
+            width: 100%;
+            border: 3px solid #ff0000;
+            border-radius: 10px;
+            box-shadow: 0 0 20px #ff0000;
+            opacity: 0.9;
+        }
+
         #audio-control {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background: rgba(255, 0, 0, 0.3);
+            background: rgba(255, 0, 0, 0.7);
             border: 1px solid #ff0000;
             color: white;
-            padding: 10px;
-            border-radius: 50%;
+            padding: 8px 15px;
+            border-radius: 20px;
             cursor: pointer;
-            z-index: 1000;
+            margin-top: 10px;
+            font-size: 1rem;
+            transition: all 0.3s;
+        }
+
+        #audio-control:hover {
+            background: rgba(255, 0, 0, 0.9);
+            transform: scale(1.05);
         }
 
         audio {
             display: none;
         }
+    </style>
+</head>
     </style>
 </head>
 <body>
