--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
             const diff = targetDate - now;
 
             if (diff <= 0) {
-                document.getElementById('countdown').innerHTML = "ВАМПЕЙН НАСТУПИЛ!";
-                document.getElementById('warning').textContent = "ОНИ ПРОСНУЛИСЬ!";
+                document.getElementById('countdown').innerHTML = "ВАМПЕЙН не НАСТУПИЛ!";
+                document.getElementById('warning').textContent = "ОНИ не ПРОСНУЛИСЬ!";
                 document.getElementById('warning').style.animation = "blink 0.5s infinite";
                 document.getElementById('warning').style.color = "#ff0000";
                 document.getElementById('warning').style.fontSize = "3rem";
